Name:                bullet
Version:             0.2.4
Synopsis:            A wrapper for the Bullet physics engine.
Description:         A wrapper for the Bullet physics engine.
License:             BSD3
License-file:        LICENSE
Author:              Csaba Hruska
Maintainer:          csaba (dot) hruska (at) gmail (dot) com
Homepage:            http://www.haskell.org/haskellwiki/Bullet
Stability:           Experimental
Category:            Physics
Tested-With:         GHC == 6.10.1, GHC == 6.10.4, GHC == 6.12.1, GHC == 7.0.3
Cabal-Version:       >= 1.2
Build-Type:          Simple

Extra-Source-Files:
  cbits/Bullet.h
  cbits/HaskellBulletAPI.h
  cbits/GLDebugDrawer.h

  bullet/LICENSE
  bullet/BulletCollision/BroadphaseCollision/btBroadphaseInterface.h
  bullet/BulletCollision/BroadphaseCollision/btDispatcher.h
  bullet/BulletCollision/BroadphaseCollision/btOverlappingPairCache.h
  bullet/BulletCollision/BroadphaseCollision/btAxisSweep3.h
  bullet/BulletCollision/BroadphaseCollision/btBroadphaseProxy.h
  bullet/BulletCollision/BroadphaseCollision/btOverlappingPairCallback.h
  bullet/BulletCollision/BroadphaseCollision/btCollisionAlgorithm.h
  bullet/BulletCollision/BroadphaseCollision/btDbvt.h
  bullet/BulletCollision/BroadphaseCollision/btDbvtBroadphase.h
  bullet/BulletCollision/BroadphaseCollision/btQuantizedBvh.h
  bullet/BulletCollision/BroadphaseCollision/btMultiSapBroadphase.h
  bullet/BulletCollision/BroadphaseCollision/btSimpleBroadphase.h
  bullet/BulletCollision/CollisionDispatch/SphereTriangleDetector.h
  bullet/BulletCollision/CollisionDispatch/btConvex2dConvex2dAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btCollisionWorld.h
  bullet/BulletCollision/CollisionDispatch/btActivatingCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btCollisionObject.h
  bullet/BulletCollision/CollisionDispatch/btBoxBoxCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btConvexConvexAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btCompoundCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btSimulationIslandManager.h
  bullet/BulletCollision/CollisionDispatch/btBox2dBox2dCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btEmptyCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btCollisionDispatcher.h
  bullet/BulletCollision/CollisionDispatch/btConvexConcaveCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btSphereBoxCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btConvexPlaneCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btManifoldResult.h
  bullet/BulletCollision/CollisionDispatch/btGhostObject.h
  bullet/BulletCollision/CollisionDispatch/btBoxBoxDetector.h
  bullet/BulletCollision/CollisionDispatch/btSphereSphereCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btSphereTriangleCollisionAlgorithm.h
  bullet/BulletCollision/CollisionDispatch/btDefaultCollisionConfiguration.h
  bullet/BulletCollision/CollisionDispatch/btUnionFind.h
  bullet/BulletCollision/CollisionDispatch/btInternalEdgeUtility.h
  bullet/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h
  bullet/BulletCollision/CollisionDispatch/btCollisionConfiguration.h
  bullet/BulletCollision/NarrowPhaseCollision/btMinkowskiPenetrationDepthSolver.h
  bullet/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h
  bullet/BulletCollision/NarrowPhaseCollision/btContinuousConvexCollision.h
  bullet/BulletCollision/NarrowPhaseCollision/btRaycastCallback.h
  bullet/BulletCollision/NarrowPhaseCollision/btVoronoiSimplexSolver.h
  bullet/BulletCollision/NarrowPhaseCollision/btGjkPairDetector.h
  bullet/BulletCollision/NarrowPhaseCollision/btConvexPenetrationDepthSolver.h
  bullet/BulletCollision/NarrowPhaseCollision/btConvexCast.h
  bullet/BulletCollision/NarrowPhaseCollision/btGjkEpa2.h
  bullet/BulletCollision/NarrowPhaseCollision/btPolyhedralContactClipping.h
  bullet/BulletCollision/NarrowPhaseCollision/btGjkEpaPenetrationDepthSolver.h
  bullet/BulletCollision/NarrowPhaseCollision/btSubSimplexConvexCast.h
  bullet/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h
  bullet/BulletCollision/NarrowPhaseCollision/btPointCollector.h
  bullet/BulletCollision/NarrowPhaseCollision/btSimplexSolverInterface.h
  bullet/BulletCollision/NarrowPhaseCollision/btGjkConvexCast.h
  bullet/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h
  bullet/BulletCollision/CollisionShapes/btStaticPlaneShape.h
  bullet/BulletCollision/CollisionShapes/btCollisionShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleCallback.h
  bullet/BulletCollision/CollisionShapes/btCollisionMargin.h
  bullet/BulletCollision/CollisionShapes/btEmptyShape.h
  bullet/BulletCollision/CollisionShapes/btOptimizedBvh.h
  bullet/BulletCollision/CollisionShapes/btMultiSphereShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleIndexVertexArray.h
  bullet/BulletCollision/CollisionShapes/btTriangleMesh.h
  bullet/BulletCollision/CollisionShapes/btBvhTriangleMeshShape.h
  bullet/BulletCollision/CollisionShapes/btConvexPointCloudShape.h
  bullet/BulletCollision/CollisionShapes/btHeightfieldTerrainShape.h
  bullet/BulletCollision/CollisionShapes/btTetrahedronShape.h
  bullet/BulletCollision/CollisionShapes/btShapeHull.h
  bullet/BulletCollision/CollisionShapes/btConvexTriangleMeshShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleIndexVertexMaterialArray.h
  bullet/BulletCollision/CollisionShapes/btConvexPolyhedron.h
  bullet/BulletCollision/CollisionShapes/btMaterial.h
  bullet/BulletCollision/CollisionShapes/btScaledBvhTriangleMeshShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleInfoMap.h
  bullet/BulletCollision/CollisionShapes/btPolyhedralConvexShape.h
  bullet/BulletCollision/CollisionShapes/btCapsuleShape.h
  bullet/BulletCollision/CollisionShapes/btMinkowskiSumShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleShape.h
  bullet/BulletCollision/CollisionShapes/btConvexHullShape.h
  bullet/BulletCollision/CollisionShapes/btBox2dShape.h
  bullet/BulletCollision/CollisionShapes/btCylinderShape.h
  bullet/BulletCollision/CollisionShapes/btBoxShape.h
  bullet/BulletCollision/CollisionShapes/btConeShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleBuffer.h
  bullet/BulletCollision/CollisionShapes/btSphereShape.h
  bullet/BulletCollision/CollisionShapes/btMultimaterialTriangleMeshShape.h
  bullet/BulletCollision/CollisionShapes/btTriangleMeshShape.h
  bullet/BulletCollision/CollisionShapes/btConcaveShape.h
  bullet/BulletCollision/CollisionShapes/btCompoundShape.h
  bullet/BulletCollision/CollisionShapes/btConvexInternalShape.h
  bullet/BulletCollision/CollisionShapes/btConvexShape.h
  bullet/BulletCollision/CollisionShapes/btStridingMeshInterface.h
  bullet/BulletCollision/CollisionShapes/btConvex2dShape.h
  bullet/BulletCollision/CollisionShapes/btUniformScalingShape.h
  bullet/BulletCollision/Gimpact/gim_linear_math.h
  bullet/BulletCollision/Gimpact/btGenericPoolAllocator.h
  bullet/BulletCollision/Gimpact/gim_bitset.h
  bullet/BulletCollision/Gimpact/gim_memory.h
  bullet/BulletCollision/Gimpact/btGImpactBvh.h
  bullet/BulletCollision/Gimpact/gim_geometry.h
  bullet/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h
  bullet/BulletCollision/Gimpact/btClipPolygon.h
  bullet/BulletCollision/Gimpact/gim_geom_types.h
  bullet/BulletCollision/Gimpact/gim_basic_geometry_operations.h
  bullet/BulletCollision/Gimpact/gim_array.h
  bullet/BulletCollision/Gimpact/btTriangleShapeEx.h
  bullet/BulletCollision/Gimpact/btGeometryOperations.h
  bullet/BulletCollision/Gimpact/gim_tri_collision.h
  bullet/BulletCollision/Gimpact/gim_radixsort.h
  bullet/BulletCollision/Gimpact/btBoxCollision.h
  bullet/BulletCollision/Gimpact/gim_box_collision.h
  bullet/BulletCollision/Gimpact/gim_box_set.h
  bullet/BulletCollision/Gimpact/gim_hash_table.h
  bullet/BulletCollision/Gimpact/gim_math.h
  bullet/BulletCollision/Gimpact/btQuantization.h
  bullet/BulletCollision/Gimpact/gim_clip_polygon.h
  bullet/BulletCollision/Gimpact/btContactProcessing.h
  bullet/BulletCollision/Gimpact/gim_contact.h
  bullet/BulletCollision/Gimpact/btGImpactQuantizedBvh.h
  bullet/BulletCollision/Gimpact/btGImpactMassUtil.h
  bullet/BulletCollision/Gimpact/btGImpactShape.h
  bullet/btBulletCollisionCommon.h
  bullet/LinearMath/btList.h
  bullet/LinearMath/btScalar.h
  bullet/LinearMath/btSerializer.h
  bullet/LinearMath/btRandom.h
  bullet/LinearMath/btPoolAllocator.h
  bullet/LinearMath/btQuickprof.h
  bullet/LinearMath/btMinMax.h
  bullet/LinearMath/btAabbUtil2.h
  bullet/LinearMath/btConvexHull.h
  bullet/LinearMath/btGeometryUtil.h
  bullet/LinearMath/btQuaternion.h
  bullet/LinearMath/btMotionState.h
  bullet/LinearMath/btTransform.h
  bullet/LinearMath/btConvexHullComputer.h
  bullet/LinearMath/btAlignedAllocator.h
  bullet/LinearMath/btVector3.h
  bullet/LinearMath/btTransformUtil.h
  bullet/LinearMath/btAlignedObjectArray.h
  bullet/LinearMath/btDefaultMotionState.h
  bullet/LinearMath/btQuadWord.h
  bullet/LinearMath/btIDebugDraw.h
  bullet/LinearMath/btStackAlloc.h
  bullet/LinearMath/btMatrix3x3.h
  bullet/LinearMath/btHashMap.h
  bullet/BulletMultiThreaded/btGpuUtilsSharedCode.h
  bullet/BulletMultiThreaded/SpuGatheringCollisionDispatcher.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuContactResult.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuGatheringCollisionTask.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/boxBoxDistance.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/Box.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuCollisionShapes.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuPreferredPenetrationDirections.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuLocalSupport.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuConvexPenetrationDepthSolver.h
  bullet/BulletMultiThreaded/SpuNarrowPhaseCollisionTask/SpuMinkowskiPenetrationDepthSolver.h
  bullet/BulletMultiThreaded/PlatformDefinitions.h
  bullet/BulletMultiThreaded/PosixThreadSupport.h
  bullet/BulletMultiThreaded/btGpuUtilsSharedDefs.h
  bullet/BulletMultiThreaded/SpuDoubleBuffer.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverLinkData_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverVertexBuffer_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverVertexData_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolver_DX11SIMDAware.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverLinkData_DX11SIMDAware.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverBuffer_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolver_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/DX11/btSoftBodySolverTriangleData_DX11.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverLinkData_OpenCL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverTriangleData_OpenCL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverBuffer_OpenCL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolver_OpenCL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverOutputCLtoGL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolver_OpenCLSIMDAware.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverVertexBuffer_OpenGL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverVertexData_OpenCL.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/OpenCL/btSoftBodySolverLinkData_OpenCLSIMDAware.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/CPU/btSoftBodySolverData.h
  bullet/BulletMultiThreaded/GpuSoftBodySolvers/CPU/btSoftBodySolver_CPU.h
  bullet/BulletMultiThreaded/HeapManager.h
  bullet/BulletMultiThreaded/btGpuDefines.h
  bullet/BulletMultiThreaded/TrbStateVec.h
  bullet/BulletMultiThreaded/SpuCollisionTaskProcess.h
  bullet/BulletMultiThreaded/btGpu3DGridBroadphaseSharedTypes.h
  bullet/BulletMultiThreaded/SpuLibspe2Support.h
  bullet/BulletMultiThreaded/btGpu3DGridBroadphaseSharedCode.h
  bullet/BulletMultiThreaded/SpuSync.h
  bullet/BulletMultiThreaded/vectormath2bullet.h
  bullet/BulletMultiThreaded/SequentialThreadSupport.h
  bullet/BulletMultiThreaded/Win32ThreadSupport.h
  bullet/BulletMultiThreaded/SpuCollisionObjectWrapper.h
  bullet/BulletMultiThreaded/btThreadSupportInterface.h
  bullet/BulletMultiThreaded/PpuAddressSpace.h
  bullet/BulletMultiThreaded/btParallelConstraintSolver.h
  bullet/BulletMultiThreaded/SpuContactManifoldCollisionAlgorithm.h
  bullet/BulletMultiThreaded/SpuSampleTaskProcess.h
  bullet/BulletMultiThreaded/btGpu3DGridBroadphaseSharedDefs.h
  bullet/BulletMultiThreaded/SpuSampleTask/SpuSampleTask.h
  bullet/BulletMultiThreaded/TrbDynBody.h
  bullet/BulletMultiThreaded/SpuFakeDma.h
  bullet/BulletMultiThreaded/btGpu3DGridBroadphase.h
  bullet/BulletDynamics/ConstraintSolver/btGeneric6DofConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btConstraintSolver.h
  bullet/BulletDynamics/ConstraintSolver/btTypedConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btHinge2Constraint.h
  bullet/BulletDynamics/ConstraintSolver/btGeneric6DofSpringConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btHingeConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btPoint2PointConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btContactSolverInfo.h
  bullet/BulletDynamics/ConstraintSolver/btSolverConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btJacobianEntry.h
  bullet/BulletDynamics/ConstraintSolver/btUniversalConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btSliderConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btSolverBody.h
  bullet/BulletDynamics/ConstraintSolver/btContactConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btSequentialImpulseConstraintSolver.h
  bullet/BulletDynamics/ConstraintSolver/btSolve2LinearConstraint.h
  bullet/BulletDynamics/ConstraintSolver/btConeTwistConstraint.h
  bullet/BulletDynamics/Character/btKinematicCharacterController.h
  bullet/BulletDynamics/Character/btCharacterControllerInterface.h
  bullet/BulletDynamics/Dynamics/btContinuousDynamicsWorld.h
  bullet/BulletDynamics/Dynamics/btRigidBody.h
  bullet/BulletDynamics/Dynamics/btDynamicsWorld.h
  bullet/BulletDynamics/Dynamics/btDiscreteDynamicsWorld.h
  bullet/BulletDynamics/Dynamics/btSimpleDynamicsWorld.h
  bullet/BulletDynamics/Dynamics/btActionInterface.h
  bullet/BulletDynamics/Vehicle/btVehicleRaycaster.h
  bullet/BulletDynamics/Vehicle/btRaycastVehicle.h
  bullet/BulletDynamics/Vehicle/btWheelInfo.h
  bullet/Bullet-C-Api.h
  bullet/vectormath/vmInclude.h
  bullet/vectormath/scalar/floatInVec.h
  bullet/vectormath/scalar/boolInVec.h
  bullet/vectormath/scalar/mat_aos.h
  bullet/vectormath/scalar/quat_aos.h
  bullet/vectormath/scalar/vectormath_aos.h
  bullet/vectormath/scalar/vec_aos.h
  bullet/vectormath/sse/vecidx_aos.h
  bullet/vectormath/sse/floatInVec.h
  bullet/vectormath/sse/boolInVec.h
  bullet/vectormath/sse/mat_aos.h
  bullet/vectormath/sse/quat_aos.h
  bullet/vectormath/sse/vectormath_aos.h
  bullet/vectormath/sse/vec_aos.h
  bullet/MiniCL/cl_gl.h
  bullet/MiniCL/cl.h
  bullet/MiniCL/MiniCLTaskScheduler.h
  bullet/MiniCL/cl_MiniCL_Defs.h
  bullet/MiniCL/cl_platform.h
  bullet/MiniCL/MiniCLTask/MiniCLTask.h
  bullet/btBulletDynamicsCommon.h
  bullet/BulletSoftBody/btSoftBodySolverVertexBuffer.h
  bullet/BulletSoftBody/btSoftBody.h
  bullet/BulletSoftBody/btDefaultSoftBodySolver.h
  bullet/BulletSoftBody/btSoftRigidDynamicsWorld.h
  bullet/BulletSoftBody/btSoftBodyRigidBodyCollisionConfiguration.h
  bullet/BulletSoftBody/btSoftBodyInternals.h
  bullet/BulletSoftBody/btSparseSDF.h
  bullet/BulletSoftBody/btSoftBodyHelpers.h
  bullet/BulletSoftBody/btSoftBodyData.h
  bullet/BulletSoftBody/btSoftSoftCollisionAlgorithm.h
  bullet/BulletSoftBody/btSoftRigidCollisionAlgorithm.h
  bullet/BulletSoftBody/btSoftBodyConcaveCollisionAlgorithm.h
  bullet/BulletSoftBody/btSoftBodySolvers.h

  Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs
  Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs
  Physics/Bullet/Raw/BulletCollision/CollisionShapes.chs
  Physics/Bullet/Raw/BulletCollision/Gimpact.chs
  Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs
  Physics/Bullet/Raw/BulletCollision.chs
  Physics/Bullet/Raw/BulletDynamics/ConstraintSolver.chs
  Physics/Bullet/Raw/BulletDynamics/Dynamics.chs
  Physics/Bullet/Raw/BulletDynamics/Vehicle.chs
  Physics/Bullet/Raw/BulletDynamics.chs
  --Physics/BulletRaw/BulletMultiThreaded/SpuNarrowPhaseCollisionTask.chs
  --Physics/BulletRaw/BulletMultiThreaded.chs
  Physics/Bullet/Raw/BulletSoftBody.chs
  Physics/Bullet/Raw/Class.chs
  Physics/Bullet/Raw/LinearMath.chs
  Physics/Bullet/Raw.chs

Library
  Build-Depends:       base >= 4 && < 5,
                       vect >= 0.4.6 && < 1

  Build-tools:         c2hs
  Exposed-Modules:     Physics.Bullet.Raw.C2HS
                       Physics.Bullet.Raw.Types
                       Physics.Bullet.Raw.Utils
                       Physics.Bullet.Raw.BulletCollision.BroadphaseCollision
                       Physics.Bullet.Raw.BulletCollision.CollisionDispatch
                       Physics.Bullet.Raw.BulletCollision.CollisionShapes
                       Physics.Bullet.Raw.BulletCollision.Gimpact
                       Physics.Bullet.Raw.BulletCollision.NarrowPhaseCollision
                       Physics.Bullet.Raw.BulletCollision
                       Physics.Bullet.Raw.BulletDynamics.ConstraintSolver
                       Physics.Bullet.Raw.BulletDynamics.Dynamics
                       Physics.Bullet.Raw.BulletDynamics.Vehicle
                       Physics.Bullet.Raw.BulletDynamics
                       --Physics.Bullet.Raw.BulletMultiThreaded.SpuNarrowPhaseCollisionTask
                       --Physics.Bullet.Raw.BulletMultiThreaded
                       Physics.Bullet.Raw.BulletSoftBody
                       Physics.Bullet.Raw.Class
                       Physics.Bullet.Raw.LinearMath
                       Physics.Bullet.Raw
  Hs-Source-Dirs:      .
  Extensions:          ForeignFunctionInterface

  if arch(i386)
    cc-options:          -march=i686 -m32 -msse2
  C-Sources:           cbits/Bullet.cpp
                       cbits/GLDebugDrawer.cpp

  if os(linux)
    Pkgconfig-Depends:   bullet
    Include-Dirs:        cbits bullet
    Extra-Libraries:     stdc++
  else
    Extra-Libraries:     BulletSoftBody BulletDynamics BulletCollision LinearMath stdc++
                         --BulletMultiThreaded GIMPACTUtils ConvexDecomposition
    Include-Dirs:        cbits bullet

  --ghc-options: -O2
